--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="contact-me">
               <h2>Get In Touch</h2>
               <h3>If you love learning new skills as much as I do.</</h3>
-              <p class="contact-message">If you have any queries or suggestions?. Drop your message. I would love to see them!..</p>
+              <p class="contact-message">If you have any queries or suggestions? Drop your message. I would love to see them!..</p>
               <a class="btn" href="mailto:mjvsairatnakumar2001@gmail.com">CONTACT ME</a>
             </div>
           </div>
